# Bucks-global

./: .gitignore  ARCHITECTURE.md  BACKEND_FIXES.md  BUCKS_V1_PLAN.md  CONTRIBUTING.md  DEPLOYMENT.md  IA.md  INFRASTRUCTURE_AUDIT.md  LAUNCH.md  LICENSE  README.md  library.json  manifest.json  vouched.json
.claude/: launch.json
.github/workflows/: ci.yml
apps/chat/: node_modules  package.json  vite.config.ts
apps/chat/src-tauri/: Cargo.toml  tauri.conf.json
apps/chat/src-tauri/src/: lib.rs  main.rs
backend/: .env.example  Dockerfile  Procfile  clean_content.py  config.py  database.py  docker-compose.yml  main.py  migrate.py  nixpacks.toml  railway.toml  requirements.txt  start.sh
backend/.railway/: config.json
backend/utils/: crypto.py  discovery.py  ipfs_rpc.py  p2p.py  recovery.py  social_dag.py
bucks-app/: README.md  package-lock.json  package.json
bucks-app/src/: app.css
bucks-app/src-tauri/: Cargo.toml  tauri.conf.json
bucks-app/tests/: PRIMARY_USER_FLOW_TEST_CASES.md  test_agent_background.sh  test_agent_research.sh  test_grand_tour.sh  test_primary_flow_smoke.sh
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthGuard.tsx  Avatar.tsx  BottomNav.tsx  ClientLayout.tsx  Comments.tsx  CosmicWeb.tsx  DiscoveryGuide.tsx  EngagementBar.tsx  GlobeHome.tsx  (+14 more)
prototype/: index.html
scripts/: reset_db.py
tests/: test_crypto.py  test_did_resolution.py  test_global_scale.py  test_p2p_integration.py  test_recovery.py
(+93 files in other folders)
