[package]
name = "bucks-chat"
version = "0.1.0"
description = "Bucks Chat — minimal login + messaging"
authors = ["you"]
edition = "2021"

[lib]
name = "bucks_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
urlencoding = "2"
